--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "bigpicture": "^2.6.2",
     "gsap": "^3.11.3",
     "jquery": "^3.6.1",
     "jquery-scrolla": "^0.0.3",
