npm module accordian-js installed, below are modilefied files, individual ne page htmlized modified:   package.json modified:   src/css/scss/abstracts/_variables.scss new file:   src/css/scss/base/_accordian.scss modified:   src/css/scss/index.scss modified:   src/css/scss/layout/_header.scss new file:   src/css/scss/pages/_individual.scss new file:   src/img/date-picker-icon.png new file:   src/img/down-arrow.png new file:   src/img/individual-image.jpg new file:   src/img/individual-poster-1.jpg new file:   src/img/individual-poster.jpg new file:   src/img/star-rating.png new file:   src/individual.html modified:   src/js/app.js modified:   webpack.config.js

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "accordion-js": "^3.3.2",
     "bigpicture": "^2.6.2",
     "gsap": "^3.11.3",
     "jquery": "^3.6.1",
