--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "bigpicture": "^2.6.2",
     "gsap": "^3.11.3",
     "jquery": "^3.6.1",
+    "jquery-popup-overlay": "^2.1.5",
     "jquery-scrolla": "^0.0.3",
     "lozad": "^1.16.0",
     "owl.carousel": "^2.3.4"
